<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/dimen_15dp"
    android:layout_marginBottom="@dimen/dimen_15dp"
    android:background="@color/color_page_bg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_select_env"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:padding="@dimen/dimen_10dp"
                app:cardBackgroundColor="@color/light_white"
                app:cardCornerRadius="@dimen/dimen_3dp"
                app:cardElevation="@dimen/dimen_5dp"
                app:cardPreventCornerOverlap="false"
                app:contentPaddingBottom="@dimen/dimen_10dp"
                app:contentPaddingLeft="@dimen/dimen_15dp"
                app:contentPaddingRight="@dimen/dimen_15dp"
                app:contentPaddingTop="@dimen/dimen_10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                card_view:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_environment"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/dimen_18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEnvironment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etEnvironment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:hint="@string/prod_or_test"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="PROD"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:padding="@dimen/dimen_10dp"
                app:cardBackgroundColor="@color/light_white"
                app:cardCornerRadius="@dimen/dimen_3dp"
                app:cardElevation="@dimen/dimen_5dp"
                app:cardPreventCornerOverlap="false"
                app:contentPaddingBottom="@dimen/dimen_5dp"
                app:contentPaddingLeft="@dimen/dimen_15dp"
                app:contentPaddingRight="@dimen/dimen_15dp"
                app:contentPaddingTop="@dimen/dimen_5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_select_env"
                card_view:cardElevation="@dimen/dimen_5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/enter_details"
                        android:textColor="@color/color_black"
                        android:textSize="@dimen/dimen_18sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilKey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_key"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etKey"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="3TnMpV"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilSalt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_salt"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etSalt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="g0nGFe03"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRedirectUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_redirect_url"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etRedirectUrl"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="rurl"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />

                        <FrameLayout
                            android:id="@+id/frame_container"
                            android:layout_width="0dp"
                            android:layout_height="0dp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_phone_no"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:text="8600508651"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilRequestID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_request_id"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etRequestID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="request id"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilUrn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_urn"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etUrn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="urn"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilWalletIdentifier"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:hint="@string/enter_wallet_identifier"
                        app:errorEnabled="false"
                        app:hintEnabled="true">

                        <EditText
                            android:id="@+id/etWalletIdentifier"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/dimen_10dp"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="wallet identi"
                            android:textColor="@color/color_black"
                            android:textSize="@dimen/dimen_16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/open_cards_button"
                style="@style/ButtonStyle"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_25dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:onClick="openCards"
                android:text="@string/open_cards"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_details" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
